Position Screen Input

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="container">
-        <div class="screen"></div>
+        <div class="screen">
+            <div class="input">2 + 3</div>
+        </div>
         <div class="buttons">
             <button>7</button>
             <button>8</button>
