Make the calculator work

--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
 <body>
     <div class="container">
         <div class="screen">
-            <div class="input">2 + 3</div>
+            <div class="input"></div>
         </div>
+        <button id="clear">AC</button>
         <div class="buttons">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>+</button>
+            <button class="num-btn">7</button>
+            <button class="num-btn">8</button>
+            <button class="num-btn">9</button>
+            <button class="operator-btn">+</button>
             <br>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>*</button>
+            <button class="num-btn">4</button>
+            <button class="num-btn">5</button>
+            <button class="num-btn">6</button>
+            <button class="operator-btn">*</button>
             <br>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
+            <button class="num-btn">1</button>
+            <button class="num-btn">2</button>
+            <button class="num-btn">3</button>
+            <button class="operator-btn">-</button>
             <br>
-            <button>0</button>
+            <button class="num-btn">0</button>
             <button>.</button>
-            <button>/</button>
-            <button>=</button>
+            <button class="operator-btn">/</button>
+            <button id="equals">=</button>
         </div>
     </div>
+    <script src="./app.js"></script>
 </body>
 
 </html>
