Fix dot button not working

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="operator-btn">-</button>
             <br>
             <button class="num-btn">0</button>
-            <button>.</button>
+            <button class="num-btn">.</button>
             <button class="operator-btn">/</button>
             <button id="equals">=</button>
         </div>
