Add calculator body

--- a/index.html
+++ b/index.html
@@ -11,30 +11,32 @@
 
 <body>
     <div class="container">
-        <div class="screen">
-            <div class="input"></div>
-        </div>
-        <button id="clear">AC</button>
-        <div class="buttons">
-            <button class="num-btn">7</button>
-            <button class="num-btn">8</button>
-            <button class="num-btn">9</button>
-            <button class="operator-btn">+</button>
-            <br>
-            <button class="num-btn">4</button>
-            <button class="num-btn">5</button>
-            <button class="num-btn">6</button>
-            <button class="operator-btn">*</button>
-            <br>
-            <button class="num-btn">1</button>
-            <button class="num-btn">2</button>
-            <button class="num-btn">3</button>
-            <button class="operator-btn">-</button>
-            <br>
-            <button class="num-btn">0</button>
-            <button class="num-btn">.</button>
-            <button class="operator-btn">/</button>
-            <button id="equals">=</button>
+        <div class="body">
+            <div class="screen">
+                <div class="input"></div>
+            </div>
+            <button id="clear">AC</button>
+            <div class="buttons">
+                <button class="num-btn">7</button>
+                <button class="num-btn">8</button>
+                <button class="num-btn">9</button>
+                <button class="operator-btn">+</button>
+                <br>
+                <button class="num-btn">4</button>
+                <button class="num-btn">5</button>
+                <button class="num-btn">6</button>
+                <button class="operator-btn">*</button>
+                <br>
+                <button class="num-btn">1</button>
+                <button class="num-btn">2</button>
+                <button class="num-btn">3</button>
+                <button class="operator-btn">-</button>
+                <br>
+                <button class="num-btn">0</button>
+                <button class="num-btn">.</button>
+                <button class="operator-btn">/</button>
+                <button id="equals">=</button>
+            </div>
         </div>
     </div>
     <script src="./app.js"></script>
