--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="input"></div>
             </div>
             <button id="clear">AC</button>
+            <button id="delete">DEL</button>
             <div class="buttons">
                 <button class="num-btn">7</button>
                 <button class="num-btn">8</button>
