--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
             <button id="clear">AC</button>
             <button id="delete">DEL</button>
             <div class="buttons">
-                <button class="num-btn">7</button>
-                <button class="num-btn">8</button>
-                <button class="num-btn">9</button>
-                <button class="operator-btn">+</button>
+                <button id="7" class="num-btn">7</button>
+                <button id="8" class="num-btn">8</button>
+                <button id="9" class="num-btn">9</button>
+                <button id="+" class="operator-btn">+</button>
                 <br>
-                <button class="num-btn">4</button>
-                <button class="num-btn">5</button>
-                <button class="num-btn">6</button>
-                <button class="operator-btn">*</button>
+                <button id="4" class="num-btn">4</button>
+                <button id="5" class="num-btn">5</button>
+                <button id="6" class="num-btn">6</button>
+                <button id="*" class="operator-btn">*</button>
                 <br>
-                <button class="num-btn">1</button>
-                <button class="num-btn">2</button>
-                <button class="num-btn">3</button>
-                <button class="operator-btn">-</button>
+                <button id="1" class="num-btn">1</button>
+                <button id="2" class="num-btn">2</button>
+                <button id="3" class="num-btn">3</button>
+                <button id="-" class="operator-btn">-</button>
                 <br>
-                <button class="num-btn">0</button>
-                <button class="num-btn">.</button>
-                <button class="operator-btn">/</button>
+                <button id="0" class="num-btn">0</button>
+                <button id="." class="num-btn">.</button>
+                <button id="/" class="operator-btn">/</button>
                 <button id="equals">=</button>
             </div>
         </div>
